--- a/examples/minimap.ipynb
+++ b/examples/minimap.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dataviz_panel.operation import minimap"
+    "from dataviz_panel.holoviews.operation import minimap"
    ]
   },
   {
